# gpha-mscape-taxaplease-container

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README copy.md  README.md  demo.ipynb  pyproject.toml
.github/workflows/: docker.yml  test-build.yml
src/: cli.py  taxaplease.py  taxaplease_data.py
src/database_generation/: generate_database.py
tests/: test_cli.py  test_taxaplease.py
